--- a/src/pug/blocks/index/faq.pug
+++ b/src/pug/blocks/index/faq.pug
@@ -4,32 +4,86 @@
 			.faq__container-item
 				.faq__container-item-title Часто задаваемые вопросы
 				.faq__container-item-items
-					.faq__container-item-items-item Ингридиенты
+					.faq__container-item-items-item.faq__container-item-items-item-active Доставка и оплата
+					.faq__container-item-items-item Как похудеть
 					.faq__container-item-items-item Производство
-					.faq__container-item-items-item Доставка
+				.faq__container-item-toggle.faq__container-item-toggle-active
+					.faq__container-item-toggle-item
+						span Как я могу оплатить свой заказ?
+							<svg width="9" height="6" viewBox="0 0 9 6" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M8.31531 0H0.684828C0.416876 0 0.179413 0.152618 0.0656652 0.397516C-0.0480826 0.642413 -0.0123165 0.923987 0.159478 1.13162L3.97472 5.75155C4.10547 5.90949 4.29661 6 4.50007 6C4.70352 6 4.89467 5.90949 5.02542 5.75155V5.75214L8.84066 1.13103C9.01245 0.923395 9.04822 0.642413 8.93388 0.397516C8.82072 0.152618 8.58326 0 8.31531 0Z" fill="#74C361"/></svg>
+						.faq__container-item-toggle-item-text
+							p Оплатить заказ возможно двумя способами. Наличными курьеру в первый день доставки питания.
+							p Банковской картой на нашем сайте при оформлении заказа.
+					.faq__container-item-toggle-item
+						span Какие условия доставки?
+							<svg width="9" height="6" viewBox="0 0 9 6" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M8.31531 0H0.684828C0.416876 0 0.179413 0.152618 0.0656652 0.397516C-0.0480826 0.642413 -0.0123165 0.923987 0.159478 1.13162L3.97472 5.75155C4.10547 5.90949 4.29661 6 4.50007 6C4.70352 6 4.89467 5.90949 5.02542 5.75155V5.75214L8.84066 1.13103C9.01245 0.923395 9.04822 0.642413 8.93388 0.397516C8.82072 0.152618 8.58326 0 8.31531 0Z" fill="#74C361"/></svg>
+						.faq__container-item-toggle-item-text
+							p Доставка осуществляется на следующий день после дня заказа с 18:00 до 22:00.
+							p Вы можете заморозить или перенести дни питания до 22:00 дня предшествующего дня доставки. В случае отмены доставки после 22:00 дня перед доставкой, дни питания «сгорают», средства за «сгоревшие» дни не возвращаются. Вы можете внести изменения в адрес доставки не позже 12:00 дня доставки.
+							p Курьер может оставлять пакет с едой возле двери/у консьержа/у друзей и т.п. по предварительной договоренности с вами.
+					.faq__container-item-toggle-item
+						span Что делать, если я пропустил звонок и приезд курьера?
+							<svg width="9" height="6" viewBox="0 0 9 6" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M8.31531 0H0.684828C0.416876 0 0.179413 0.152618 0.0656652 0.397516C-0.0480826 0.642413 -0.0123165 0.923987 0.159478 1.13162L3.97472 5.75155C4.10547 5.90949 4.29661 6 4.50007 6C4.70352 6 4.89467 5.90949 5.02542 5.75155V5.75214L8.84066 1.13103C9.01245 0.923395 9.04822 0.642413 8.93388 0.397516C8.82072 0.152618 8.58326 0 8.31531 0Z" fill="#74C361"/></svg>
+						.faq__container-item-toggle-item-text
+							p Курьер может ожидать клиента по адресу не более 15 минут, далее он будет вынужден продолжить маршрут. Повторный приезд курьера возможен за дополнительную плату – 100 рублей (оплата наличными курьеру).
 				.faq__container-item-toggle
 					.faq__container-item-toggle-item
-						span Используете ли вы сахар или сахарозаменитель? Если да, то какой?
+						span Как вы можете мне помочь похудеть?
 							<svg width="9" height="6" viewBox="0 0 9 6" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M8.31531 0H0.684828C0.416876 0 0.179413 0.152618 0.0656652 0.397516C-0.0480826 0.642413 -0.0123165 0.923987 0.159478 1.13162L3.97472 5.75155C4.10547 5.90949 4.29661 6 4.50007 6C4.70352 6 4.89467 5.90949 5.02542 5.75155V5.75214L8.84066 1.13103C9.01245 0.923395 9.04822 0.642413 8.93388 0.397516C8.82072 0.152618 8.58326 0 8.31531 0Z" fill="#74C361"/></svg>
-						.faq__container-item-toggle-item-text Культ джайнизма включает в себя поклонение Махавире и другим тиртханкарам, поэтому адаптация осмысляет гедонизм. Бабувизм подчеркивает субъективный конфликт. Представляется логичным, что актуализация откровенна.
+						.faq__container-item-toggle-item-text
+							p Очень просто! Для эффективного снижения веса, необходимо организовать для себя правильное питание с дефицитом калорийности и сбалансированным составом БЖУ. У нас есть программы питания для похудения разработанные диетологом совместно с шеф-поваром. Мы поможем подобрать необходимую именно вам линейку питания, вы будете питаться вкусно, сытно, разнообразно. Мы уже посчитали за вас все калории и БЖУ. Приготовили и упаковали. С нами худеть легко и удобно, потому что всю организацию вашего правильного питания мы берем на себя!
 					.faq__container-item-toggle-item
-						span Полезное питание — это вкусно?
+						span Ваше здоровое питание это вкусно?
 							<svg width="9" height="6" viewBox="0 0 9 6" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M8.31531 0H0.684828C0.416876 0 0.179413 0.152618 0.0656652 0.397516C-0.0480826 0.642413 -0.0123165 0.923987 0.159478 1.13162L3.97472 5.75155C4.10547 5.90949 4.29661 6 4.50007 6C4.70352 6 4.89467 5.90949 5.02542 5.75155V5.75214L8.84066 1.13103C9.01245 0.923395 9.04822 0.642413 8.93388 0.397516C8.82072 0.152618 8.58326 0 8.31531 0Z" fill="#74C361"/></svg>
-						.faq__container-item-toggle-item-text Культ джайнизма включает в себя поклонение Махавире и другим тиртханкарам, поэтому адаптация осмысляет гедонизм. Бабувизм подчеркивает субъективный конфликт. Представляется логичным, что актуализация откровенна.
+						.faq__container-item-toggle-item-text
+							p Наша основная цель делать правильное питание вкусным, сытным и разнообразным. Мы уделяем особое внимание вкусу наших блюд при создании программ питания, чтобы вы у вас не было ощущения ограничения в еде и вы получали настоящее удовольствие от приема пищи.
 					.faq__container-item-toggle-item
-						span Нужно ли мне считать КБЖУ и соблюдать диету?
+						span Считаю калории, но не худею, как вы можете мне помочь?
 							<svg width="9" height="6" viewBox="0 0 9 6" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M8.31531 0H0.684828C0.416876 0 0.179413 0.152618 0.0656652 0.397516C-0.0480826 0.642413 -0.0123165 0.923987 0.159478 1.13162L3.97472 5.75155C4.10547 5.90949 4.29661 6 4.50007 6C4.70352 6 4.89467 5.90949 5.02542 5.75155V5.75214L8.84066 1.13103C9.01245 0.923395 9.04822 0.642413 8.93388 0.397516C8.82072 0.152618 8.58326 0 8.31531 0Z" fill="#74C361"/></svg>
-						.faq__container-item-toggle-item-text Культ джайнизма включает в себя поклонение Махавире и другим тиртханкарам, поэтому адаптация осмысляет гедонизм. Бабувизм подчеркивает субъективный конфликт. Представляется логичным, что актуализация откровенна.
+						.faq__container-item-toggle-item-text
+							p Для эффективного снижения веса за счет жирового запаса, необходимо низкокалорийное питание, а также баланс белков, жиров и углеводов. Мы высчитываем не только калорийность, но и БЖУ, что позволяет снижать вес именно за счет жира, а не мышечной массы. При этом, наше питание, ускоряет метаболизм, за счет грамотно выверенного соотношения БЖУ.
 					.faq__container-item-toggle-item
-						span Есть ли в вашем меню десерты?
+						span Обязательно ли мне заниматься спортом, чтобы похудеть на вашем питании?
 							<svg width="9" height="6" viewBox="0 0 9 6" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M8.31531 0H0.684828C0.416876 0 0.179413 0.152618 0.0656652 0.397516C-0.0480826 0.642413 -0.0123165 0.923987 0.159478 1.13162L3.97472 5.75155C4.10547 5.90949 4.29661 6 4.50007 6C4.70352 6 4.89467 5.90949 5.02542 5.75155V5.75214L8.84066 1.13103C9.01245 0.923395 9.04822 0.642413 8.93388 0.397516C8.82072 0.152618 8.58326 0 8.31531 0Z" fill="#74C361"/></svg>
-						.faq__container-item-toggle-item-text Культ джайнизма включает в себя поклонение Махавире и другим тиртханкарам, поэтому адаптация осмысляет гедонизм. Бабувизм подчеркивает субъективный конфликт. Представляется логичным, что актуализация откровенна.
+						.faq__container-item-toggle-item-text
+							p Нет, это не обязательно. Вы можете сбросить лишний вес без увеличения физической активности. Для этого необходимо подобрать правильную низкокалорийною программу питания. За счет того, что вы будете потреблять меньше калорий, чем тратите будет происходить безопасное и комфортное снижение веса.
+					.faq__container-item-toggle-item
+						span Хочу стать фитоняшкой, с вами это возможно?
+							<svg width="9" height="6" viewBox="0 0 9 6" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M8.31531 0H0.684828C0.416876 0 0.179413 0.152618 0.0656652 0.397516C-0.0480826 0.642413 -0.0123165 0.923987 0.159478 1.13162L3.97472 5.75155C4.10547 5.90949 4.29661 6 4.50007 6C4.70352 6 4.89467 5.90949 5.02542 5.75155V5.75214L8.84066 1.13103C9.01245 0.923395 9.04822 0.642413 8.93388 0.397516C8.82072 0.152618 8.58326 0 8.31531 0Z" fill="#74C361"/></svg>
+						.faq__container-item-toggle-item-text
+							p Конечно, за счет нормализации питания, вы сможете вкусно и сытно достигнуть своей цели и быстрее увидеть результаты тренировок. Сбалансированный состав КБЖУ в программах питания, позволит снижать вес именно за счет жировой массы, сохраняя мышечную.
+					.faq__container-item-toggle-item
+						span Что делать если я постоянно срываюсь с диет?
+							<svg width="9" height="6" viewBox="0 0 9 6" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M8.31531 0H0.684828C0.416876 0 0.179413 0.152618 0.0656652 0.397516C-0.0480826 0.642413 -0.0123165 0.923987 0.159478 1.13162L3.97472 5.75155C4.10547 5.90949 4.29661 6 4.50007 6C4.70352 6 4.89467 5.90949 5.02542 5.75155V5.75214L8.84066 1.13103C9.01245 0.923395 9.04822 0.642413 8.93388 0.397516C8.82072 0.152618 8.58326 0 8.31531 0Z" fill="#74C361"/></svg>
+						.faq__container-item-toggle-item-text
+							p Для того, чтобы срывов с правильного питания стало меньше, важно питаться вкусно и разнообразно, получая удовольствие от процесса снижения веса. Уделять больше времени себе и другим своим увлечениям. Мы заботимся о том, чтобы у вас появилось больше свободного времени на себя, чтобы вы не тратили силу воли на готовку, взвешивание еды, подсчет калорийности и т.д. Тем самым, процесс становиться приятнее, а срывов меньше. Формируются новые привычки питания и новое поведение.
+					.faq__container-item-toggle-item
+						span Мне нужно скинуть быстро пару-тройку лишних кг, что порекомендуете?
+							<svg width="9" height="6" viewBox="0 0 9 6" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M8.31531 0H0.684828C0.416876 0 0.179413 0.152618 0.0656652 0.397516C-0.0480826 0.642413 -0.0123165 0.923987 0.159478 1.13162L3.97472 5.75155C4.10547 5.90949 4.29661 6 4.50007 6C4.70352 6 4.89467 5.90949 5.02542 5.75155V5.75214L8.84066 1.13103C9.01245 0.923395 9.04822 0.642413 8.93388 0.397516C8.82072 0.152618 8.58326 0 8.31531 0Z" fill="#74C361"/></svg>
+						.faq__container-item-toggle-item-text
+							p Воспользуйтесь DETOX программой. Это экспресс похудение, за три дня питания на напитках, смузи и соках вы сможете сбросить до 2-3х кг лишнего веса. Так же, детокс можно использовать как разгрузочный день.
+				.faq__container-item-toggle
+					.faq__container-item-toggle-item
+						span Кто составляет программы питания, и как рассчитываете КБЖУ?
+							<svg width="9" height="6" viewBox="0 0 9 6" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M8.31531 0H0.684828C0.416876 0 0.179413 0.152618 0.0656652 0.397516C-0.0480826 0.642413 -0.0123165 0.923987 0.159478 1.13162L3.97472 5.75155C4.10547 5.90949 4.29661 6 4.50007 6C4.70352 6 4.89467 5.90949 5.02542 5.75155V5.75214L8.84066 1.13103C9.01245 0.923395 9.04822 0.642413 8.93388 0.397516C8.82072 0.152618 8.58326 0 8.31531 0Z" fill="#74C361"/></svg>
+						.faq__container-item-toggle-item-text
+							p Над созданием и просчетом программ питания работает команда специалистов, таких как, диетолог, шеф-повар, технологи и т.д. Так же существует отдельная фокус-группа, которая регулярно оценивает блюдо по вкусовым качествам, сытости и проверяет на соответствие составу и КБЖУ. При создании блюд, мы уделяем большое внимание, точному подсчету КБЖУ, в этом нам помогает специализированное программное обеспечение.
+					.faq__container-item-toggle-item
+						span Какой интервал между приготовлением и доставкой питания на дом?
+							<svg width="9" height="6" viewBox="0 0 9 6" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M8.31531 0H0.684828C0.416876 0 0.179413 0.152618 0.0656652 0.397516C-0.0480826 0.642413 -0.0123165 0.923987 0.159478 1.13162L3.97472 5.75155C4.10547 5.90949 4.29661 6 4.50007 6C4.70352 6 4.89467 5.90949 5.02542 5.75155V5.75214L8.84066 1.13103C9.01245 0.923395 9.04822 0.642413 8.93388 0.397516C8.82072 0.152618 8.58326 0 8.31531 0Z" fill="#74C361"/></svg>
+						.faq__container-item-toggle-item-text
+							p Как правило, интервал составляет всего пару - тройку часов. Мы не готовим заранее и даже не делаем заготовки. Когда блюдо приготовиться, оно тут же упаковывается с помощью специального оборудования и отправляется в холодильную камеру, чтобы сохранить весь вкус и свежесть. Мы заботимся о том, чтобы вы получали только свежие и качественные блюда. Кстати, именно поэтому, доставку мы осуществляем ежедневно.
+					.faq__container-item-toggle-item
+						span Как вы закупаете продукты и ингредиенты для приготовления блюд?
+							<svg width="9" height="6" viewBox="0 0 9 6" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M8.31531 0H0.684828C0.416876 0 0.179413 0.152618 0.0656652 0.397516C-0.0480826 0.642413 -0.0123165 0.923987 0.159478 1.13162L3.97472 5.75155C4.10547 5.90949 4.29661 6 4.50007 6C4.70352 6 4.89467 5.90949 5.02542 5.75155V5.75214L8.84066 1.13103C9.01245 0.923395 9.04822 0.642413 8.93388 0.397516C8.82072 0.152618 8.58326 0 8.31531 0Z" fill="#74C361"/></svg>
+						.faq__container-item-toggle-item-text
+							p Мы сотрудничаем только с проверенными поставщиками продуктов. Прежде чем сотрудничать с поставщиком, мы проверяем предоставляемую продукцию на качество и соответствие требованиям. Вам не нужно тратить время на поход за продуктами, выискивать свежие продукты, опасаться «просрочки». Мы позаботились о том, чтобы блюда были приготовлены из свежих и качественных ингредиентов.
 			.faq__container-item
 				.faq__container-item-title О доставке и оплате
 				.faq__container-item-text
 					p Доставка бесплатная
-					p Доставки осуществляются каждый день, то есть к вам каждый день приезжает свежее, только что приготовленные блюда от шеф-повара
-					p Доставка существляется вечером с 18,00 до 22,00. Привозим по удобному для вас адресу.
+					p Доставки осуществляются каждый день, то есть к вам каждый день приезжает свежее, только что приготовленные блюда от шеф-повара.
+					p Доставка осуществляется вечером с 18:00 до 22:00. Привозим по удобному для вас адресу.
 					p Оплатить можно двумя способами:
 					p Наличными курьеру
 					p По карте через наш сайт, для этого перейдите по
