--- a/src/css/blocks/index/_diet.css
+++ b/src/css/blocks/index/_diet.css
@@ -242,14 +242,17 @@
   background-color: $white;
   -webkit-border-radius: 80px;
           border-radius: 80px;
-  border: 3px solid transparent;
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
   position: relative;
+  display: none;
 }
 .diet__container-form .diet__type:nth-child(12) {
   margin-right: 0;
+}
+.diet__container-form .diet__type:hover {
+  background-color: $green;
 }
 .diet__container-form .diet__type label {
   cursor: pointer;
@@ -288,18 +291,19 @@
   color: $green;
 }
 .diet__container-form .diet__type-active {
-  background-color: $green;
-  -webkit-box-shadow: 0px 15px 25px rgba(156,217,143,0.4);
-          box-shadow: 0px 15px 25px rgba(156,217,143,0.4);
+  display: block;
 }
 .diet__container-form .diet__type-active label {
-  color: $white;
+  color: #313131;
 }
 .diet__container-form .diet__type-active:hover label {
   color: $white;
 }
 .diet__container-form .diet__type-hovered {
-  border-color: $white;
+  background-color: $green;
+}
+.diet__container-form .diet__type-hovered label {
+  color: $white;
 }
 .diet__container-form .diet__blocks {
   -webkit-flex-basis: 100%;
