--- a/src/stylus/blocks/index/_price.styl
+++ b/src/stylus/blocks/index/_price.styl
@@ -66,6 +66,9 @@
 							&-saleprice
 								&:nth-child(5)
 									display none
+							&-price
+								&:after
+									display none
 				&:nth-child(2)
 					.price__container-slider-slide
 						.price-content
